EVENT BUS!!!! and get rid of shitty ai